souphttpsrc: Use GST_FLOW_FLUSHING when flushing, not GST_FLOW_EOS

... and reset it properly after flushing is done. Fixes playback
in many cases when buffering is used.

https://bugzilla.gnome.org/show_bug.cgi?id=727821